--- a/index.html
+++ b/index.html
@@ -143,17 +143,28 @@
             <button class="button" type="button" onclick="closePopup('addPopup')">Cancel</button>
         </form>
     </div>
-         <!-- Success Message Popup -->
-        <div id="successPopup" class="popup">
-            <h3>Success!</h3>
-            <p>Data saved successfully.</p>
-            <button class="button" onclick="closePopup('successPopup')">OK</button>
-        </div>
-
-        <div class="overlay" id="overlay" onclick="closePopups()"></div>
+        
+            <!-- Popup for removing tasks -->
+    <div id="removePopup" class="popup">
+        <h3>Remove Task</h3>
+        <table id="popupTable">
+            <thead></thead>
+            <tbody id="popupTaskList">
+                <!-- Tasks will be populated here -->
+            </tbody>
+        </table>
+        <button class="button" onclick="closePopup('removePopup')">Close</button>
     </div>
 
-    <script>
+    <!-- Overlay for popup -->
+    <div id="overlay" class="overlay" onclick="closeOverlay()"></div>
+
+    <!-- Success message popup -->
+    <div id="messagePopup" class="popup">
+        <p id="messageContent"></p>
+        <button class="button" onclick="closePopup('messagePopup')">Close</button>
+    </div>
+   <script>
         // Hardcoded employee ID, you can replace this value or dynamically set it
         const employeeId = '10005315'; // Replace with the employee ID you want to load by default
 
@@ -189,27 +200,107 @@
                 });
         }
 
-        function showAddPopup() {
+              function showAddPopup() {
             document.getElementById('addPopup').style.display = 'block';
             document.getElementById('overlay').style.display = 'block';
         }
+
+        function showRemovePopup() {
+            document.getElementById('removePopup').style.display = 'block';
+            document.getElementById('overlay').style.display = 'block';
+        }
+
         function closePopup(popupId) {
             document.getElementById(popupId).style.display = 'none';
+            closeOverlay();
+        }
+
+        function closeOverlay() {
             document.getElementById('overlay').style.display = 'none';
         }
 
-        function closePopups() {
-            closePopup('addPopup');
-            closePopup('successPopup');
+        document.getElementById('taskForm').onsubmit = async function(event) {
+            event.preventDefault(); // Prevent the default form submission
+
+            const form = event.target;
+            const formData = new FormData(form);
+            const params = new URLSearchParams(formData).toString();
+
+            try {
+                const response = await fetch(form.action, {
+                    method: form.method,
+                    headers: {
+                        'Content-Type': form.enctype
+                    },
+                    body: params
+                });
+
+                const result = await response.json();
+                document.getElementById('messageContent').innerText = result.message;
+                document.getElementById('messagePopup').style.display = 'block';
+                document.getElementById('overlay').style.display = 'block';
+
+                closePopup('addPopup'); // Close the add task popup
+            } catch (error) {
+                document.getElementById('messageContent').innerText = 'Error: ' + error.message;
+                document.getElementById('messagePopup').style.display = 'block';
+                document.getElementById('overlay').style.display = 'block';
+            }
+        };
+
+        function populatePopupTable() {
+    const tableBody = document.querySelector('#cardContainer table tbody');
+    const popupTaskList = document.getElementById('popupTaskList');
+
+    if (!tableBody) {
+        console.error('Table body not found.');
+        return;
+    }
+
+    popupTaskList.innerHTML = '';
+
+    const rows = tableBody.querySelectorAll('tr');
+    rows.forEach((row, index) => {
+        const clonedRow = row.cloneNode(true);
+        const removeButtonCell = document.createElement('td');
+
+        // Skip the remove button for the first row
+        if (index !== 0) {
+            removeButtonCell.innerHTML = `<button class="button" onclick="removeTask(${index + 1})">X</button>`;
         }
-        function showSuccessPopup() {
-            document.getElementById('successPopup').style.display = 'block';
-            document.getElementById('overlay').style.display = 'block';
-        } 
-        function showRemovePopup() {
-            alert('Remove Task functionality coming soon!');
+
+        clonedRow.appendChild(removeButtonCell);
+        popupTaskList.appendChild(clonedRow);
+    });
+}
+
+        function removeTask(rowNumber) {
+            const apiUrl = 'https://oje3cr7sy2.execute-api.ap-south-1.amazonaws.com/V1/RemoveTask';  // Replace with your actual Lambda API Gateway URL
+
+            fetch(apiUrl, {
+                method: 'DELETE',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ rowNumber })
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    alert('Task removed successfully');
+                    fetchDataFromLambda(); // Refresh the data after task removal
+                    closePopup('removePopup');
+                } else {
+                    alert('Error removing task: ' + data.error);
+                }
+            })
+            .catch(error => {
+                console.error('Error removing task:', error);
+                alert('Error removing task');
+            });
         }
     </script>
+
 
 </body>
 </html>
