--- a/index.html
+++ b/index.html
@@ -70,6 +70,33 @@
             border-radius: 4px;
             cursor: pointer;
         }
+        /* Popup styles */
+        .popup {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            border: 1px solid #ccc;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            z-index: 1000;
+        }
+        .popup button {
+            margin-top: 10px;
+        }
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+        }
+
     </style>
 </head>
 <body>
@@ -91,6 +118,34 @@
             <button id="editButton" class="button" style="margin-right: 10px;" onclick="showAddPopup()">Add Task</button>
             <button id="editButton1" class="button" onclick="showRemovePopup()">Remove Task</button>
         </div>
+
+            <!-- Popup for adding tasks -->
+    <div id="addPopup" class="popup">
+        <h3>Add New Task</h3>
+        <form id="taskForm" action="https://tfyct2zj8k.execute-api.ap-south-1.amazonaws.com/A1/test3" method="POST" enctype="application/x-www-form-urlencoded">
+            <label for="employeeID">Employee ID:</label>
+            <input type="text" id="employeeID" name="eID" required><br><br>
+
+            <label for="employeeName">Employee Name:</label>
+            <input type="text" id="employeeName" name="eName" required><br><br>
+            
+            <label for="taskDescription">Task:</label>
+            <input type="text" id="taskDescription" name="TaskDescription" required><br><br>
+
+            <label for="StartDate">Start Date:</label>
+            <input type="date" id="StartDate" name="StartDate"><br><br>
+
+            <label for="EndDate">End Date:</label>
+            <input type="date" id="EndDate" name="EndDate"><br><br>
+
+            <label for="Remarks">Remarks:</label>
+            <input type="text" id="Remarks" name="Remarks"><br><br>
+
+            <button class="button" type="submit">Add</button>
+            <button class="button" type="button" onclick="closePopup('addPopup')">Cancel</button>
+        </form>
+    </div>
+
 
     <script>
         // Hardcoded employee ID, you can replace this value or dynamically set it
