--- a/index.html
+++ b/index.html
@@ -181,8 +181,9 @@
                 });
         }
 
-        function showEditPopup() {
-            alert('Add Task functionality coming soon!');
+          function showAddPopup() {
+            document.getElementById('addPopup').style.display = 'block';
+            document.getElementById('overlay').style.display = 'block';
         }
     </script>
 
