--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
         // Skip the remove button for the first row
         if (index !== 0) {
-            removeButtonCell.innerHTML = <button class="button" onclick="removeTask(${index + 1})">X</button>;
+            removeButtonCell.innerHTML = '<button class="button" onclick="removeTask(${index + 1})">X</button>';
         }
 
         clonedRow.appendChild(removeButtonCell);
