--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Task List</title>
     <style>
-       header {
+        header {
             background-color: #008080;
             padding: 10px 20px;
             display: flex;
@@ -70,7 +70,7 @@
             border-radius: 4px;
             cursor: pointer;
         }
-    /* Popup styles */
+        /* Popup styles */
         .popup {
             display: none;
             position: fixed;
@@ -96,7 +96,6 @@
             background: rgba(0, 0, 0, 0.5);
             z-index: 999;
         }
-
     </style>
 </head>
 <body>
@@ -115,56 +114,58 @@
             No tasks found for the Employee ID.
         </div>
 
-        <div id="buttonContainer" style="display: flex;  margin-top: 20px;">
+        <div id="buttonContainer" style="display: flex; margin-top: 20px;">
             <button id="editButton" class="button" style="margin-right: 10px;" onclick="showAddPopup()">Add Task</button>
             <button id="editButton1" class="button" onclick="showRemovePopup()">Remove Task</button>
         </div>
     
         <!-- Popup for adding tasks -->
-    <div id="addPopup" class="popup">
-        <h3>Add New Task</h3>
-        <form id="taskForm" action="https://bi3hh9apo0.execute-api.ap-south-1.amazonaws.com/S1/Addtask" method="POST" enctype="application/x-www-form-urlencoded">
-            <label for="employeeid">Employee ID:</label>
-            <input type="text" id="employeeID" name="eID" required><br><br>
+        <div id="addPopup" class="popup">
+            <h3>Add New Task</h3>
+            <form id="taskForm" action="https://bi3hh9apo0.execute-api.ap-south-1.amazonaws.com/S1/Addtask" method="POST" enctype="application/x-www-form-urlencoded">
+                <label for="employeeid">Employee ID:</label>
+                <input type="text" id="employeeID" name="eID" required><br><br>
 
-            <label for="employeeName">Employee Name:</label>
-            <input type="text" id="employeeName" name="eName" required><br><br>
+                <label for="employeeName">Employee Name:</label>
+                <input type="text" id="employeeName" name="eName" required><br><br>
 
-            <label for="taskDescription">Task:</label>
-            <input type="text" id="taskDescription" name="TaskDescription" required><br><br>
+                <label for="taskDescription">Task:</label>
+                <input type="text" id="taskDescription" name="TaskDescription" required><br><br>
 
-            <label for="StartDate">Start Date:</label>
-            <input type="date" id="StartDate" name="StartDate"><br><br>
+                <label for="StartDate">Start Date:</label>
+                <input type="date" id="StartDate" name="StartDate"><br><br>
 
-            <label for="EndDate">End Date:</label>
-            <input type="date" id="EndDate" name="EndDate"><br><br>
+                <label for="EndDate">End Date:</label>
+                <input type="date" id="EndDate" name="EndDate"><br><br>
 
-            <button class="button" type="submit">Add</button>
-            <button class="button" type="button" onclick="closePopup('addPopup')">Cancel</button>
-        </form>
-    </div>
+                <button class="button" type="submit">Add</button>
+                <button class="button" type="button" onclick="closePopup('addPopup')">Cancel</button>
+            </form>
+        </div>
         
-            <!-- Popup for removing tasks -->
-    <div id="removePopup" class="popup">
-        <h3>Remove Task</h3>
-        <table id="popupTable">
-            <thead></thead>
-            <tbody id="popupTaskList">
-                <!-- Tasks will be populated here -->
-            </tbody>
-        </table>
-        <button class="button" onclick="closePopup('removePopup')">Close</button>
+        <!-- Popup for removing tasks -->
+        <div id="removePopup" class="popup">
+            <h3>Remove Task</h3>
+            <table id="popupTable">
+                <thead></thead>
+                <tbody id="popupTaskList">
+                    <!-- Tasks will be populated here -->
+                </tbody>
+            </table>
+            <button class="button" onclick="closePopup('removePopup')">Close</button>
+        </div>
+
+        <!-- Overlay for popup -->
+        <div id="overlay" class="overlay" onclick="closeOverlay()"></div>
+
+        <!-- Success message popup -->
+        <div id="messagePopup" class="popup">
+            <p id="messageContent"></p>
+            <button class="button" onclick="closePopup('messagePopup')">Close</button>
+        </div>
     </div>
 
-    <!-- Overlay for popup -->
-    <div id="overlay" class="overlay" onclick="closeOverlay()"></div>
-
-    <!-- Success message popup -->
-    <div id="messagePopup" class="popup">
-        <p id="messageContent"></p>
-        <button class="button" onclick="closePopup('messagePopup')">Close</button>
-    </div>
-   <script>
+    <script>
         // Hardcoded employee ID, you can replace this value or dynamically set it
         const employeeId = '10005315'; // Replace with the employee ID you want to load by default
 
@@ -174,44 +175,45 @@
         };
 
         function fetchTasksForEmployee(employeeId) {
-            const apiUrl = 'https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/S1/Test5?EmployeeID=${encodeURIComponent(employeeId)}';
+            const apiUrl = `https://imf44ag3d4.execute-api.ap-south-1.amazonaws.com/S1/Test5?EmployeeID=${encodeURIComponent(employeeId)}`;
             document.getElementById('loading').style.display = 'block'; // Show loading message
 
-          fetch(apiUrl)
-    .then(response => {
-        if (!response.ok) {
-            throw new Error('Network response was not ok ' + response.statusText);
+            fetch(apiUrl)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok ' + response.statusText);
+                    }
+                    return response.text();
+                })
+                .then(data => {
+                    console.log('Fetched data:', data); // Log the fetched data for debugging
+                    document.getElementById('loading').style.display = 'none';
+                    const cardContainer = document.getElementById('cardContainer');
+
+                    if (data.trim() !== '') {
+                        cardContainer.innerHTML = data; // Insert the HTML response directly
+                        document.getElementById('editButton').style.display = 'block';
+                        document.getElementById('editButton1').style.display = 'block';
+                    } else {
+                        cardContainer.innerHTML = '';
+                        document.getElementById('noTasksMessage').style.display = 'block';
+                        document.getElementById('editButton').style.display = 'none';
+                        document.getElementById('editButton1').style.display = 'none';
+                    }
+                })
+                .catch(error => {
+                    console.error('Error fetching tasks:', error);
+                    document.getElementById('loading').innerHTML = 'Error loading tasks. Please try again later.';
+                });
         }
-        return response.text();
-    })
-    .then(data => {
-        console.log('Fetched data:', data); // Log the fetched data for debugging
-        document.getElementById('loading').style.display = 'none';
-        const cardContainer = document.getElementById('cardContainer');
 
-        if (data.trim() !== '') {
-            cardContainer.innerHTML = data; // Insert the HTML response directly
-            document.getElementById('editButton').style.display = 'block';
-            document.getElementById('editButton1').style.display = 'block';
-        } else {
-            cardContainer.innerHTML = '';
-            document.getElementById('noTasksMessage').style.display = 'block';
-            document.getElementById('editButton').style.display = 'none';
-            document.getElementById('editButton1').style.display = 'none';
-        }
-    })
-    .catch(error => {
-        console.error('Error fetching tasks:', error);
-        document.getElementById('loading').innerHTML = 'Error loading tasks. Please try again later.';
-    });
-
-
-              function showAddPopup() {
+        function showAddPopup() {
             document.getElementById('addPopup').style.display = 'block';
             document.getElementById('overlay').style.display = 'block';
         }
 
         function showRemovePopup() {
+            populatePopupTable(); // Ensure the popup is populated before displaying
             document.getElementById('removePopup').style.display = 'block';
             document.getElementById('overlay').style.display = 'block';
         }
@@ -244,67 +246,39 @@
                 const result = await response.json();
                 document.getElementById('messageContent').innerText = result.message;
                 document.getElementById('messagePopup').style.display = 'block';
-                document.getElementById('overlay').style.display = 'block';
+                document.getElementById('addPopup').style.display = 'none';
+                closeOverlay();
 
-                closePopup('addPopup'); // Close the add task popup
+                // Re-fetch tasks after adding
+                fetchTasksForEmployee(employeeId);
             } catch (error) {
-                document.getElementById('messageContent').innerText = 'Error: ' + error.message;
+                console.error('Error adding task:', error);
+                document.getElementById('messageContent').innerText = 'Failed to add task.';
                 document.getElementById('messagePopup').style.display = 'block';
-                document.getElementById('overlay').style.display = 'block';
             }
         };
 
         function populatePopupTable() {
-    const tableBody = document.querySelector('#cardContainer table tbody');
-    const popupTaskList = document.getElementById('popupTaskList');
+            const taskList = JSON.parse(localStorage.getItem('taskList')) || []; // Simulating fetching tasks
+            const popupTaskList = document.getElementById('popupTaskList');
+            popupTaskList.innerHTML = ''; // Clear previous content
 
-    if (!tableBody) {
-        console.error('Table body not found.');
-        return;
-    }
-
-    popupTaskList.innerHTML = '';
-
-    const rows = tableBody.querySelectorAll('tr');
-    rows.forEach((row, index) => {
-        const clonedRow = row.cloneNode(true);
-        const removeButtonCell = document.createElement('td');
-
-        // Skip the remove button for the first row
-        if (index !== 0) {
-            removeButtonCell.innerHTML = '<button class="button" onclick="removeTask(${index + 1})">X</button>';
+            if (taskList.length === 0) {
+                const noTasksRow = document.createElement('tr');
+                noTasksRow.innerHTML = '<td colspan="3">No tasks available</td>';
+                popupTaskList.appendChild(noTasksRow);
+            } else {
+                taskList.forEach((task, index) => {
+                    const row = document.createElement('tr');
+                    row.innerHTML = `
+                        <td><input type="checkbox" class="removeTask" data-index="${index}"></td>
+                        <td>${task.description}</td>
+                        <td>${task.date}</td>
+                    `;
+                    popupTaskList.appendChild(row);
+                });
+            }
         }
-
-        clonedRow.appendChild(removeButtonCell);
-        popupTaskList.appendChild(clonedRow);
-    });
-}
-
-        function removeTask(rowNumber) {
-            const apiUrl = 'https://oje3cr7sy2.execute-api.ap-south-1.amazonaws.com/V1/RemoveTask';  // Replace with your actual Lambda API Gateway URL
-
-            fetch(apiUrl, {
-                method: 'DELETE',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ rowNumber })
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    alert('Task removed successfully');
-                    fetchDataFromLambda(); // Refresh the data after task removal
-                    closePopup('removePopup');
-                } else {
-                    alert('Error removing task: ' + data.error);
-                }
-            })
-            .catch(error => {
-                console.error('Error removing task:', error);
-                alert('Error removing task');
-            });
-        }
-</script>
+    </script>
 </body>
-</html> 
+</html>
